# Barada

./: HOTP.cpp  HOTP.h  HOTPCredentials.cpp  HOTPWindow.cpp  HOTPWindow.h  Makefile.in  README  README.md  config.status  configure
Barada/: .project  AndroidManifest.xml  build.xml
Barada/res/layout/: main.xml  profile_edit.xml  profile_list.xml  profile_row.xml  profile_use.xml
Barada/res/values/: dimensions.xml  strings.xml
Barada/src/com/android/crypt/barada/: Barada.java  BaradaDatabase.java  Hex.java  Migrator.java  NewKeyEntry.java  OneTimePasswordAlgorithm.java  PinEntry.java  ProfileEdit.java  ProfileUse.java  R.java
client/: AndroidManifest.xml
client/res/layout/: key_entry.xml
client/res/values/: strings.xml
client/src/com/android/crypt/otp/: NewKeyEntry.java  OneTimePasswordAlgorithm.java  PinEntry.java  R.java
server/: AUTHORS  COPYING  HOTP.cpp  HOTP.h  HOTPCredentials.cpp  HOTPCredentials.h  HOTPWindow.cpp  HOTPWindow.h  HexTest.cpp  INSTALL  Makefile  Makefile.am  Makefile.in  README  Util.cpp  Util.h  barada-add.cpp  config.status  configure.ac  hotpadd.cpp  pam_barada.cpp  pam_hotp.cpp
